--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "prepare": "npm run prod && npm run build-lib",
-    "dev": "webpack --mode development",
+    "dev": "mv package.json package.json.bak && echo -n '{}' > package.json && wasm-pack build --target web && mv -f package.json.bak package.json && webpack --mode development",
     "prod": "webpack --mode production",
     "watch": "webpack --mode development --watch",
     "test": "jest",
