Added arithmetic operations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ path = "srcRust/lib.rs"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+bnum = "0.13.0"
 js-sys = "0.3.77"
 priority-queue = "2.3.1"
 wasm-bindgen = "0.2"
